// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android returns fontFamily-Regular and weight = undefined for normal 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "Arial-Regular",
      "fontWeight": undefined,
    }
  }
>
  this is Android
</Text>
`;

exports[`flattens styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "Arial",
      "fontWeight": "normal",
      "margin": 20,
      "paddingHorizontal": 10,
    }
  }
>
  works with nested styles!
</Text>
`;

exports[`iOS returns fontFamily and weight for normal 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "Arial",
      "fontWeight": "normal",
    }
  }
>
  this is iOS
</Text>
`;

exports[`passes Text props through 1`] = `
<Text
  accessible={true}
  allowFontScaling={false}
  ellipsizeMode="tail"
  style={
    Object {
      "fontFamily": "Arial",
      "fontWeight": "normal",
    }
  }
>
  passes through props!
</Text>
`;
